fixing img stretching final-final

--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,6 @@ body {
     margin: 0;
 }
 
-img {
-    width: 100%;
-}
-
 /* colori */
 .scuro {
     background-color: #2a2826;
@@ -150,6 +146,10 @@ p {
 
 .tre {
     width: 25%;
+}
+
+.foto {
+    width: 100%;
 }
 
 /* footer */
